src/objects/smagicinteract__SMS_SenderId__c.object
<CustomObject>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__senderId__c</fullName>
        <label>SenderId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SMS SenderId</label>
    <listViews>
        <fullName>smagicinteract__SenderId_View</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__senderId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>SenderId View</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>SMS SenderIds Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS SenderIds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>